# berkeley-circle-ml

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: map_predictions.ipynb
src/: config.py  predict.py  run_etl.py  train.py
src/etl/: features.py  fetch.py
src/evaluation/: metrics.py  plots.py
src/models/: baseline.py  lstm_model.py  xgboost_model.py
tests/: test_features.py  test_metrics.py
