[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "berkeley-circle-ml"
version = "0.1.0"
description = "24-hour surface current forecast for Berkeley Circle, SF Bay — XGBoost + LSTM on non-tidal residuals"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "xarray",
    "netcdf4",
    "h5py",
    "requests",
    "pyarrow",
    "noaa-coops",
    "dataretrieval",
    "utide",
    "xgboost",
    "torch",
    "shap",
    "mlflow",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle, pyflakes, isort
ignore = ["E501"]                 # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
